--- a/about.textile
+++ b/about.textile
@@ -10,7 +10,7 @@ h1. The Author
 
 Hi, I'm Brendon Murphy, but the site already told you that.  I go by the handle "xternal" at various spots over the internet.  It's a handle with no meaning; I picked it when I was in 6th grade and excited about BBS'ing.
 
-In March of 2010 I joined "Kajabi":http://www.kajabi.com as a lead programmer.  We are a "Ruby on Rails":http://rubyonrails.com shop that targets the Internet Marketing niche, and plan to launch our platform soon.
+In March of 2010 I joined "Kajabi":http://www.kajabi.com as a lead programmer.  We are a "Ruby on Rails":http://rubyonrails.com shop that targets the Internet Marketing niche, and plan to launch our SaaS platform soon.
 
 h1. The Site
 
