--- a/archive.textile
+++ b/archive.textile
@@ -5,10 +5,10 @@ title: Archive
 <h2 id="intro">The list of all {{ site.posts.size }} archived posts.</h2>
 
 <div class="post">
-  <ul>
+  <ul id="archived-posts">
   {% for post in site.posts %}
     <li>
-      {{ post.date | date: "%b %d, %Y"  }} &mdash; <a href="{{ post.url }}">{{ post.title }}</a>
+      <div class="archive-date">{{ post.date | date: "%b %d, %Y"  }}</div><a href="{{ post.url }}">{{ post.title }}</a>
     </li>
   {% endfor %}
   </ul>
