--- a/archive.textile
+++ b/archive.textile
@@ -2,7 +2,7 @@
 layout: default
 title: Archive
 ---
-<h2 id="intro">The list of all {{ site.posts.size }} archived posts.</h2>
+<h1 id="intro">{{ site.posts.size }} archived posts.</h1>
 
 <div class="post">
   <ul id="archived-posts">
