--- a/_posts/2013-01-15-a-simple-example-of-wrapping.textile
+++ b/_posts/2013-01-15-a-simple-example-of-wrapping.textile
@@ -59,5 +59,5 @@ When you want to sanitize the comment, say after finding it via a controller, wr
 
 Now your views can keep rolling on with a calls to _(code)@comment.content_ and be none the wiser.  Remember, Ruby's duck typing is powerful;  rely on what instances respond to, as opposed to what they are instances of.
 
-This is partially a matter of taste, remember there's often not a "right way".  What's important is to have options, and leverage the option that feels right given the situation at hand.  Different approaches have different pros & cons.  With wrapping, for instance, you have to remember to wrap!  And if it's a collection, you must wrap them all.  There's gems like "draper":https://github.com/drapergem/draper or "display-case":https://github.com/objects-on-rails/display-case than can help you on your way.
+This is partially a matter of taste, remember there's often not a "right way".  What's important is to have options, and leverage the option that feels right given the situation at hand.  Different approaches have different pros & cons.  With wrapping, for instance, you have to remember to wrap!  And if it's a collection, you must wrap them all.  There's gems like "draper":https://github.com/drapergem/draper or "display-case":https://github.com/objects-on-rails/display-case that can help you on your way.
 
