--- a/_posts/2013-01-26-a-note-about--friendly--passwords.textile
+++ b/_posts/2013-01-26-a-note-about--friendly--passwords.textile
@@ -32,5 +32,4 @@ It's worth noting that certain characters often will confuse users if they are m
 * O (the uppercase OH)
 * l (lowercase L)
 
-You can _(code)String#tr_ these out for substitutions, or strip them alltogether.  This will slightly reduce entropy, but by keeping a longer
-password you compensate somewhat.
+You can _(code)String#tr_ these out for substitutions, or strip them alltogether.  This will slightly reduce entropy, but by keeping a longer password you compensate somewhat.
