change 'email' to 'screen'

--- a/_posts/2013-01-26-a-note-about--friendly--passwords.textile
+++ b/_posts/2013-01-26-a-note-about--friendly--passwords.textile
@@ -24,7 +24,7 @@ SecureRandom.urlsafe_base64.gsub(/[^a-z0-9]+/i, '')[0,12]
 
 This strips non-alphanumeric characters such as '_' and '-' out.  This is useful because people are less used to typing them, and also, certain mouseclick-to-copy behaviors will split on those characters depending on the environment.
 
-It's worth noting that certain characters often will confuse users if they are manually entering a password as viewed in an email.  Fonts can make characters including the following difficult to distinguish
+It's worth noting that certain characters often will confuse users if they are manually entering a password as viewed from the screen.  Fonts can make characters including the following difficult to distinguish
 
 * 0 (zero)
 * 1 (the number one)
